--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
-    <title>FARINA</title>
+    <title>Aroma</title>
   </head>
 
   <body>
     <header>
-      <h1 class="logo">farina</h1>
+      <h1 class="logo">Aroma</h1>
       <input type="checkbox" id="nav-toggle" class="nav-toggle" />
       <nav>
         <ul>
